--- a/Sepehr.Core/Core.Mvc/Views/Shared/_Layout.cshtml
+++ b/Sepehr.Core/Core.Mvc/Views/Shared/_Layout.cshtml
@@ -4,8 +4,8 @@
 <html>
 <head>
     <meta charset="utf-8" lang="fa" xml:lang="fa" />
-    <title>پنل مدیریتی سپهر سیستم</title>
-    <link rel="Shortcut Icon" href="~/Content/images/fav.png" />
+    <title>پنل مدیریتی سپهر360</title>
+    <link rel="Shortcut Icon" href="/Areas/Core/Content/images/fav.png" />
     <meta name="viewport" content="width=device-width" />
 
     @Styles.Render("~/Content/core/css/kendo")
